    the call stack display
  * if a source file is used in multiple project, it is no longer opened multiple times in 
    the editor
  * improved lookup speed in browse info, now removing duplicate entries for eponymous templates
  * fixed issues with quoted arguments with trailing backslash in settings
  * browse info now updated when JSON paths changed in global options
  * fixed spurious crash when removing multiple lines 
  * now installs cv2pdb 0.21

2011-06-19 Version 0.3.25

  * fixed version information of the DLL
  * error list: warnings are no longer shown as errors
  * project name added to buildlog.html to allow multiple projects with the same intermediate dir
  * fixed highlighting of version(unittest) and debug without identifier
  * friendlier error message if debug executable or working dir do not exist
  * reduced parsing thread priority to interfere less with editing
  * adjusted vsi2d to build with the latest VS2010 SDK
  * Visual D now builds with DMD 2.053
  * moved from std.date to std.datetime to fix some time displays
  * moved outlining into parse thread to reduce delays when editing large files
  * added warning to library search path settings
  * d-files now set to UTF8 encoding if not already marked by BOM
  * fixed transparent window frame around dialogs in VS2010
  * added drag'n'drop of project folders
  * added support for "Stop Outlining" and "Toggle All Outlining"
  * tweaked outlining for multi-dimensional arrays and token strings
  * build order of custom/resource compilations now sorted by dependencies
  * project items now sorted alphabetically
  * fixed a few more issues with relative paths causing a source file to be opened twice in the editor

unreleased Version 0.3.26

  * fixed regression in last version: single file compilation did not build any d files
  * single file compilation: avoid relinking every time
  * seperate compile and link: no longer trashes dependencies in link step