@@ -1161,7 +1161,7 @@ private:
 	HRESULT _OpenSolutionItem(string pszPath, int line, string scop)
 	{
 		HRESULT hr = S_OK;
-		hr = OpenFileInSolutionWithScope(pszPath, line, scop);
+		hr = OpenFileInSolutionWithScope(pszPath, line, scop, true);
 		if(hr == S_OK && _closeOnReturn)
 			sWindowFrame.Hide();
 		return hr;
